--- a/css/new-style.css
+++ b/css/new-style.css
@@ -5,7 +5,6 @@
 }
 
 body{
-  height: 100vh;
   background: #FFF7F3;
   line-height: 1.1;
   font-family: 'Lato', sans-serif;
@@ -327,14 +326,15 @@ a{
   display: flex;
   flex-wrap: wrap;
   /* justify-content: space-evenly; */
-  justify-content: stretch;
+  justify-content: space-around;
 }
 
 #two-books .book1{
   background: #FDFEF8;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
-  padding: 65px 95px;
+  padding: 5rem 0;
   flex-basis: 50%;
 }
 
@@ -342,9 +342,10 @@ a{
   /* background: #FBE9E9; */
   background: #FFF2F2;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   flex-basis: 50%;
-  padding: 65px 95px;
+  padding: 5rem 0;
 }
 
 
@@ -753,9 +754,13 @@ a{
   justify-content: space-around;
 }
 
-#main-ftr .last-ftr .column{
+/* #main-ftr .last-ftr .column{
   flex: 1;
 }
+
+#main-ftr .last-ftr .column{
+  flex: 2;
+} */
 #main-ftr .last-ftr .btns-last{
   display: flex;
   flex-wrap: wrap;
